<resources>
    <string name="app_name">The Wiki Game</string>

    <!--    Buttons-->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <!--    Alerts-->
    <string name="alert_invalid_link">You tried to reach an invalid link.</string>

    <!--    General Texts-->
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_game_configuration">Game Configuration</string>
    <string name="text_version" translatable="false">ver. alpha 0.1.0</string>
    <string name="text_loading">Loading…</string>
    <string name="text_title">The Wiki Game</string>
    <string name="text_settings">Settings</string>

    <!--    Main Activity-->
    <string name="main_button_play">Play</string>
    <string name="main_button_records">Game Records</string>
    <string name="main_button_about">About</string>

    <!--    Game Configuration Activity-->
    <!--    Language-->
    <string name="game_config_text_language">Game Language</string>
    <string name="game_config_text_language_description">The language of Wikipedia</string>
    <string name="game_config_text_start_article">Start Article</string>
    <string name="game_config_text_end_article">End Article</string>
    <string name="game_config_language_english">English</string>
    <string name="game_config_language_hebrew">Hebrew</string>
    <string name="game_config_language_arabic">Arabic</string>
    <string name="game_config_language_russian">Russian</string>
    <string name="game_config_language_french">French</string>
    <string name="game_config_language_spanish">Spanish</string>


    <!--    Time Limit-->
    <string name="game_config_text_time_limit">Time Limit</string>
    <string name="game_config_text_time_limit_description">Limits the game time</string>
    <string name="game_config_hint_time_limit">Time Limit (seconds)</string>

    <!--    Jump Limit-->
    <string name="game_config_text_jump_limit">Jump Limit</string>
    <string name="game_config_text_jump_limit_description">Limits the jumps between links</string>
    <string name="game_config_hint_jump_limit">Jump Limit (number)</string>

    <!--    Go Back Limit-->
    <string name="game_config_text_go_back_limit">Go Back Limit</string>
    <string name="game_config_text_go_back_limit_description">Limits the times you can return back</string>

    <!--    Show Links Only Limit-->
    <string name="game_config_text_show_links_only_limit">Show Links Only Limit</string>
    <string name="game_config_text_show_links_only_limit_description">Limits the times you can hide text except links</string>

    <!--    Find In Text Limit-->
    <string name="game_config_text_find_in_text_limit">Find In Text Limit</string>
    <string name="game_config_text_find_in_text_limit_description">Limits the times you find in text</string>

    <string name="game_config_error_field_empty">Can\'t be empty, either fill or disable.</string>
    <string name="game_config_hint_uses">Number of uses</string>



    <!--    Preview Activity-->
    <string name="preview_toolbar_title">Preview</string>

    <!--    Game Activity-->
    <string name="game_find_in_text">Find in text</string>
    <string name="game_go_back">Go back</string>
    <string name="game_pause">Pause</string>
    <string name="game_button_find">Find</string>
    <string name="game_dialog_exit">Exit</string>
    <string name="game_dialog_destination">Destination</string>
    <string name="game_dialog_new_game">New Game</string>
    <string name="game_dialog_title">Paused</string>



    <!--    Settings Activity-->
    <string name="settings_text_language">Language</string>
    <string name="settings_text_language_description">Currently set to English</string>
    <string name="settings_text_sounds">Sounds</string>
    <string name="settings_text_sounds_description">Toggle sounds on/off</string>
    <string name="settings_text_theme">Apply Theme</string>
    <string name="settings_text_theme_description">Change the theme of the app.</string>
    <string name="settings_button_reset_settings">Reset settings</string>
    <string name="settings_dialog_reset_title">Reset Settings</string>
    <string name="settings_dialog_reset_description">This action will reset all application settings and return it to stock. Are you sure?</string>
    <string name="theme_light">Light</string>
    <string name="theme_default">System Default</string>
    <string name="theme_dark">Dark</string>


    <!--    Game Detail Activity-->
    <string name="game_detail_text_date">Date</string>
    <string name="game_detail_text_start_article">Start Article</string>
    <string name="game_detail_text_end_article">End Article</string>
    <string name="game_detail_text_time">Time</string>
    <string name="game_detail_text_jumps">Jumps</string>
    <string name="game_detail_text_returns">Returns</string>
    <string name="game_detail_text_find_in_text">Find In Text</string>
    <string name="game_detail_text_finished">Finished</string>
    
    <!--    About Activity-->
    <string name="about_text_description_title">Game Description</string>
    <string name="about_text_detailed_description">
        The Wiki Game is inspired by the well known "Wiki Challenge",
        where you get to both play and enrich your knowledge on the Wikipedia platform.
        The gameplay idea is an association game that gives you a starting article,
        and through the available links scattered across the article you are on, you can navigate to other articles.
        The goal is to reach end article you designated with the helps and setbacks you decide on.
        Challenge yourself and your friends and learn something new everyday!
    </string>
    <string name="about_text_authors">Authors</string>
    <string name="about_text_omer_gez">Omer Gez</string>
    <string name="about_text_guy_tsitsiashvili">Guy Tsitsiashvili</string>
    <string name="about_text_omer_cohen">Omer Cohen</string>
    <string name="about_text_version">Version</string>
    <string name="author_expandable_email">Email</string>
    <string name="author_expandable_linkedin">LinkedIn</string>
    <string name="game_config_text_configuration">Configuration</string>
</resources>