<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/game_menu_go_back_id"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/game_go_back"
        app:showAsAction="always" />

    <item
        android:id="@+id/game_menu_find_in_text_id"
        android:icon="@drawable/ic_baseline_find_in_page_24"
        android:title="@string/game_find_in_text"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/game_menu_show_links_only_id"
        android:icon="@drawable/ic_outline_manage_search_24"
        android:title="@string/game_find_in_text"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/game_menu_pause"
        android:title="@string/game_pause"
        app:showAsAction="never"/>

</menu>