<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="author1Model"
            type="com.oog.thewikigame.models.AuthorModel" />
        <variable
            name="author2Model"
            type="com.oog.thewikigame.models.AuthorModel" />
        <variable
            name="author3Model"
            type="com.oog.thewikigame.models.AuthorModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/settings_appbar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/about_toolbar_id"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/main_button_about" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".activities.AboutActivity">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/about_text_description_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/about_text_detailed_description"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/about_text_authors"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />


                <include layout="@layout/author_expandable"
                    app:model="@{author1Model}"/>
                <include layout="@layout/author_expandable"
                    app:model="@{author2Model}"/>
                <include layout="@layout/author_expandable"
                    app:model="@{author3Model}"/>


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/text_version"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="@color/design_default_color_secondary_variant" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>