<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="exitButtonModel"
            type="com.oog.thewikigame.models.IconButtonModel" />

        <variable
            name="restartButtonModel"
            type="com.oog.thewikigame.models.IconButtonModel" />
        <variable
            name="endArticleString"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/game_dialog_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/game_dialog_destination"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@{endArticleString}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/game_dialog_exit"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <include
                    layout="@layout/material_icon_button_filled"
                    app:model="@{exitButtonModel}" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/game_dialog_new_game"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <include
                    layout="@layout/material_icon_button_filled"
                    app:model="@{restartButtonModel}" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</layout>