<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="startArticleString"
            type="String" />

        <variable
            name="endArticleString"
            type="String"/>

        <variable
            name="playButtonLock"
            type="boolean" />

        <variable
            name="startArticleIconButtonModel"
            type="com.oog.thewikigame.models.IconButtonModel" />
        <variable
            name="endArticleIconButtonModel"
            type="com.oog.thewikigame.models.IconButtonModel" />

        <variable
            name="expandIconButtonModel"
            type="com.oog.thewikigame.models.IconButtonModel" />

        <variable
            name="findInTextTwoLineSwitchModel"
            type="com.oog.thewikigame.models.TwoLineSwitchModel" />

        <!--        Game Configuration models-->

        <variable
            name="languageSelectModel"
            type="com.oog.thewikigame.models.TwoLinePopupModel" />

        <variable
            name="timeLimitModel"
            type="com.oog.thewikigame.models.TwoLineSwitchTextFieldModel" />

        <variable
            name="jumpLimitModel"
            type="com.oog.thewikigame.models.TwoLineSwitchTextFieldModel" />

        <variable
            name="goBackLimitModel"
            type="com.oog.thewikigame.models.TwoLineSwitchTextFieldModel" />

        <variable
            name="showLinksOnlyLimitModel"
            type="com.oog.thewikigame.models.TwoLineSwitchTextFieldModel" />

        <variable
            name="findInTextLimitModel"
            type="com.oog.thewikigame.models.TwoLineSwitchTextFieldModel" />


    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/game_config_toolbar_id"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/text_game_configuration" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/setting_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".activities.SettingsActivity">


                <!--                Start and End Article Layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/game_config_text_start_article"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/game_config_text_input_start_article_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:text="@{startArticleString}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <include
                            layout="@layout/material_icon_button_flat"
                            app:model="@{startArticleIconButtonModel}" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/game_config_text_end_article"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/game_config_text_input_end_article_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            app:endIconDrawable="@drawable/ic_baseline_preview_24"
                            app:endIconMode="custom">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:text="@{endArticleString}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <include
                            layout="@layout/material_icon_button_flat"
                            app:model="@{endArticleIconButtonModel}" />

                    </LinearLayout>
                </LinearLayout>

                <!--                Configuration Card-->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/game_config_card_expandable_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"

                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/game_config_layout_configuration_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_margin="8dp"
                                android:contentDescription="@string/game_config_text_configuration"
                                android:src="@drawable/ic_baseline_tune_24" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/game_config_text_configuration"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                            <FrameLayout
                                android:id="@+id/game_config_icon_button_expand_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <include
                                    layout="@layout/material_icon_button_flat"
                                    app:model="@{expandIconButtonModel}" />
                            </FrameLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/game_config_layout_expandable_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:orientation="vertical"
                            android:visibility="visible">


                            <include
                                android:id="@+id/game_config_layout_language_id"
                                layout="@layout/list_item_two_line_text_popup"
                                app:model="@{languageSelectModel}" />

                            <View
                                style="@style/Divider"
                                android:layout_margin="8dp" />

                            <include
                                android:id="@+id/game_config_layout_time_limit_id"
                                layout="@layout/list_item_two_line_text_switch"
                                app:model="@{timeLimitModel}" />

                            <View
                                style="@style/Divider"
                                android:layout_margin="8dp" />

                            <include
                                android:id="@+id/game_config_layout_jump_limit_id"
                                layout="@layout/list_item_two_line_text_switch"
                                app:model="@{jumpLimitModel}" />

                            <View
                                style="@style/Divider"
                                android:layout_margin="8dp" />

                            <include
                                android:id="@+id/game_config_layout_go_back_limit_id"
                                layout="@layout/list_item_two_line_text_switch"
                                app:model="@{goBackLimitModel}" />

                            <View
                                style="@style/Divider"
                                android:layout_margin="8dp" />

                            <include
                                android:id="@+id/game_config_layout_show_links_only_limit_id"
                                layout="@layout/list_item_two_line_text_switch"
                                app:model="@{showLinksOnlyLimitModel}" />

                            <View
                                style="@style/Divider"
                                android:layout_margin="8dp" />

                            <include
                                android:id="@+id/game_config_layout_find_in_text_limit_id"
                                layout="@layout/list_item_two_line_text_switch"
                                app:model="@{findInTextLimitModel}" />


                        </LinearLayout>

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <Button
                    android:id="@+id/game_config_button_play_id"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:enabled="@{playButtonLock}"
                    android:text="@string/main_button_play" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>